--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
+body {
+    font-family: "Gill Sans", sans-serif;
+    margin: 0;
+}
+
 header {
     background-color: #464642;
     display: flex;
     justify-content: space-between;
-    /* align-content: space-between; */
 }
 
+#socialmediaimg{
+    padding: 0 2em 0;
+}
 #mainlogo {
     padding: 1em 0;
 }
@@ -13,12 +20,48 @@ header {
     display: flex;
     align-items: center;
     color: white;
-    font-family: "Gill Sans", sans-serif;
     font-size: 2em;
 }
 
 
-#socialmedia{
+#socialmedia {
     display: flex;
     align-items: center;
+}
+
+#searchmenu{
+    display: inline-block;
+    padding: 2em;
+}
+
+#searchmenu form{
+    display: flex;
+    align-items: center;
+}
+
+#searchmenu form img{
+    width: 20px;
+    height: auto;
+    padding-right: 5px;
+}
+
+#searchmenu form input{
+    border: none;
+    font-style: italic;
+}
+
+menu {
+    list-style-type: none;
+    padding: 0;
+}
+
+menu li {
+    border-top: 1px dotted gray;
+
+}
+
+menu li p {
+    cursor: pointer;
+    margin: 0;
+    padding: 0.5em 0;
 }
