--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@ body {
 #topheader {
     top: 0;
     position: sticky;
+    z-index: 1;
     background-color: #464642;
 }
 
@@ -59,7 +60,7 @@ body {
     height: 10%;
     top: 70px;
     position: sticky;
-
+    z-index: 1;
 }
 
 
@@ -106,10 +107,34 @@ menu li {
 
 }
 
-menu li p {
+#searchmenu div{
+    display: inline-block;
+    margin-top: 20px;
+}
+
+#searchmenu img{
+    width: 80px;
+    margin-right: 10px;
+}
+
+#searchmenu p {
     cursor: pointer;
     margin: 0;
-    padding: 0.5em 0;
+    padding: 0.5em 0 0.8em 0;
+}
+
+#searchmenu section p {
+    font-size: small;
+    color: gray;
+}
+#searchmenu section p:first-of-type {
+    margin-top: 80px;
+}
+
+#searchmenu section p:nth-of-type(2) {
+    margin-top: 10px;
+    color: black;
+    font-weight: 500;
 }
 
 #miscellaneous,
@@ -124,6 +149,7 @@ menu li p {
 }
 
 #mainheader {
+
     display: inline-block;
     padding: 2em 0;
     color: #787878;
@@ -173,7 +199,7 @@ main {
     font-weight: 600;
 }
 
-#menudisplay button:nth-of-type(2n+1){
+#menudisplay button:nth-of-type(2n+1) {
     color: white;
     background-color: #8DC63F;
 }
@@ -182,61 +208,96 @@ main {
 #menudisplay section {
     display: inline-block;
     width: 47%;
+    height: 420px;
     background-color: white;
     margin-right: 1em;
+    margin-bottom: 1.5em;
+    position: relative;
+    bottom: 0;
+    vertical-align: top;
+    box-shadow: 0 0 4px rgba(204, 204, 204, 0.24);
+
 }
 
-#menudisplay h1{
+#menudisplay h1 {
     font-size: 2.5em;
     font-weight: 900;
 }
 
-#menudisplay h3{
+#menudisplay h3 {
     margin-bottom: 0;
     margin-top: 0.5em;
     margin-left: 1rem;
 }
-#menudisplay h1,#menudisplay h3{
+
+#menudisplay h1,
+#menudisplay h3 {
     color: #8DC63F;
     text-transform: uppercase;
 
 }
-#menudisplay footer{
+
+#menudisplay footer {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
     margin-left: 1rem;
     margin-bottom: 0.8em;
 }
-#menudisplay img {
+
+.menuimages {
     width: 100%;
     height: 200px;
     object-fit: cover;
 }
-.menudescription{
-    margin-left: 10px;
+
+.menudescription {
+    margin-left: 1rem;
     margin-top: 0.5em;
-    margin: 0.5em 0 5em 1rem;
-    font-size:small;
+    font-size: small;
     letter-spacing: 0.5px;
     line-height: 20px;
     color: gray;
     width: 88%;
 }
-#menudisplay footer div{
+
+#menudisplay footer div {
     float: right;
     margin-right: 1em;
-    
+
 }
 
-#menudisplay footer p{
+#menudisplay footer p {
     display: inline-block;
     margin: 0 0.5em 0;
-    font-size:small;
+    font-size: small;
 
 }
-#menudisplay footer img{
+
+.menuicons {
+    display: inline-block;
+    width: 22px;
+    margin-top: 0.5em;
+}
+
+.favoriteicon {
     display: inline-block;
     width: 25px;
     height: auto;
     opacity: 0.3;
+    margin-right: 1rem;
+}
+
+#popularlabel {
+    text-transform: uppercase;
+    background-color: #3d4e2c;
+    position: absolute;
+    margin-top: 17px;
+    margin-left: 10px;
+    padding: 4px 9px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 500;
 }
 
 /* color: #8DC63F; */
