--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,4 @@
 body {
-    /* font-family: "Gill Sans", sans-serif; */
     font-family: 'Roboto', sans-serif;
     margin: 0;
 }
@@ -16,17 +15,20 @@ body {
     top: 0;
     position: sticky;
     z-index: 1;
+    height: 85px;
     background-color: #464642;
 }
 
 #socialmedia {
     width: 20%;
     text-align: left;
-    padding-left: 2em;
+    padding-left: 40px;
 }
 
+
 #socialmedia img {
-    width: 200px;
+    width: 30px;
+    margin: 0 5px;
 }
 
 #mainlogo {
@@ -37,58 +39,88 @@ body {
 }
 
 #mainlogo img {
-    width: 100px;
+    width: 110px;
 }
 
 
 #call {
     width: 20%;
     color: white;
-    font-size: 1.5em;
+    font-size: 25px;
+    font-weight: 500;
     text-align: right;
 }
+
+#call p {
+    margin: 0;
+    display: inline-block;
+    vertical-align: baseline;
+}
+
+#call img:first-of-type {
+
+    vertical-align: middle;
+    display: inline-block;
+    margin-right: 20px;
+    margin-left: 5px;
+    margin-bottom: 5px;
+}
+
+#call img:nth-of-type(2) {
+    width: 25px;
+
+}
+
+#call img:last-of-type {
+    vertical-align: middle;
+    width: 30px;
+    margin-right: 30px;
+}
+
+
 
 #searchicon {
     width: 20px;
 }
 
-
-
-
-
 #subheader {
+    background: linear-gradient(white 50%, rgba(250, 250, 250, 0.3));
     height: 10%;
-    top: 70px;
+    top: 85px;
     position: sticky;
     z-index: 1;
 }
 
 
 
+
+#subheader form {
+    width: 90%;
+    background-color: white;
+
+}
+
+#subheader form img {
+
+    height: 20px;
+    margin-left: 2em;
+    vertical-align: middle;
+}
+
+
+#subheader input {
+    height: 40px;
+    border: none;
+    font-style: italic;
+    vertical-align: middle;
+
+}
+
 #subheader input::placeholder {
     font-size: 1em;
     color: #a8a8a8;
 }
 
-
-
-
-#subheader form img {
-    height: 20px;
-    margin-left: 2em;
-}
-
-#subheader form input {
-    height: 20px;
-    vertical-align: top;
-
-}
-
-#subheader input {
-    border: none;
-    font-style: italic;
-    background-color: #f8f8f8;
-}
 
 #searchmenu {
     padding: 0 2em;
@@ -107,26 +139,39 @@ menu li {
 
 }
 
-#searchmenu div{
+#searchmenu div {
     display: inline-block;
     margin-top: 20px;
 }
 
-#searchmenu img{
+#searchmenu img {
     width: 80px;
     margin-right: 10px;
 }
 
 #searchmenu p {
+    color: #555;
+    font-weight: 500;
     cursor: pointer;
     margin: 0;
     padding: 0.5em 0 0.8em 0;
+    transition: color 0.7s ease-in-out;
+}
+
+#searchmenu li:first-of-type p{
+    color:#8DC63F;
+}
+
+
+
+#searchmenu p:hover{
+    color: black;
 }
 
 #searchmenu section p {
-    font-size: small;
     color: gray;
 }
+
 #searchmenu section p:first-of-type {
     margin-top: 80px;
 }
@@ -137,34 +182,54 @@ menu li {
     font-weight: 500;
 }
 
-#miscellaneous,
-#myaccount {
+.mainheadericons {
     display: inline-block;
+    /* position: relative; */
+    height: 40px;
+
 }
 
+.mainheadericons img {
+    vertical-align: bottom;
+    margin-right: 13px;
+    width: 25px;
+
+}
+
+
+.mainheadericons span {
+    display: inline-block;
+    margin-right: 25px;
+    height: 50px;
+}
+
+.mainheadericons span:last-of-type {
+    margin-right: 20px;
+
+
+}
+
+.mainheadericons:last-of-type {
+    float: right;
+
+}
+
+#mainheader {
+
+    padding: 22px 0 22px 10px;
+    color: #666;
+    font-size: 15px;
+    border-bottom: 1px dotted #ddd;
+
+
+}
 
 #myaccount {
     float: right;
     padding-right: 1em;
 }
 
-#mainheader {
 
-    display: inline-block;
-    padding: 2em 0;
-    color: #787878;
-    font-size: small;
-    width: 100%;
-    border-bottom: 1px dotted gray;
-
-
-}
-
-
-#mainheader img {
-    margin: 0 1em 0px 1.5em;
-    width: 25px;
-}
 
 
 
@@ -189,21 +254,6 @@ main {
     position: sticky;
 }
 
-#menudisplay button {
-    background: none;
-    color: #8DC63F;
-    border: 1px solid #8DC63F;
-    padding: 0.7em 1.3em;
-    text-transform: uppercase;
-    font-size: 0.7em;
-    font-weight: 600;
-}
-
-#menudisplay button:nth-of-type(2n+1) {
-    color: white;
-    background-color: #8DC63F;
-}
-
 
 #menudisplay section {
     display: inline-block;
@@ -221,13 +271,13 @@ main {
 
 #menudisplay h1 {
     font-size: 2.5em;
-    font-weight: 900;
+    font-weight: 700;
+    margin-top: 17px;
+
 }
 
 #menudisplay h3 {
-    margin-bottom: 0;
-    margin-top: 0.5em;
-    margin-left: 1rem;
+    margin: 0.5em 0 0 1rem;
 }
 
 #menudisplay h1,
@@ -243,6 +293,36 @@ main {
     bottom: 0;
     margin-left: 1rem;
     margin-bottom: 0.8em;
+}
+
+
+#menudisplay button {
+    cursor: pointer;
+    background: none;
+    color: #8DC63F;
+    border: 1px solid #8DC63F;
+    padding: 0.8em 1.3em;
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: 600;
+    transition: color, background-color;
+
+}
+
+#menudisplay button:nth-of-type(1) {
+    color: #f0f0f0;
+    background-color: #8dc63f;
+}
+
+#menudisplay button:nth-of-type(1):hover {
+    color: white;
+    background-color: rgb(141, 198, 63, 0.7);
+}
+
+#menudisplay button:nth-of-type(2):hover {
+    color: rgb(141, 198, 63, 0.7);
+    border-color: rgb(141, 198, 63, 0.7);
+
 }
 
 .menuimages {
@@ -269,24 +349,47 @@ main {
 
 #menudisplay footer p {
     display: inline-block;
-    margin: 0 0.5em 0;
+    margin: 0 0.5em 0.2em;
     font-size: small;
+    
+
+}
+
+#firstfavoriteicon{
+    cursor: pointer;
+    width: 25px;
+    height: 25px;
+    /* opacity: 0.3; */
+    margin-right: 16px;
+    background:url('./imgs/icons/FavoritesIcon.png');
+}
+.favoriteicon {
+    cursor: pointer;
+    width: 25px;
+    height: 20px;
+    opacity: 0.3;
+    margin-right: 16px;
+    background:url('../imgs/icons/FavoritesIcon.png') no-repeat;
+    background-size: contain;
+    transition: background 0.3s ease-in-out,opacity 0.3s ease-in-out;
+
+}
+
+
+.favoriteicon:hover {
+    opacity: 1;
+    background:url('../imgs/icons/greenheart.png') no-repeat;
+    background-size: contain;
 
 }
 
 .menuicons {
     display: inline-block;
     width: 22px;
-    margin-top: 0.5em;
+    margin-top: 6.5px;
 }
 
-.favoriteicon {
-    display: inline-block;
-    width: 25px;
-    height: auto;
-    opacity: 0.3;
-    margin-right: 1rem;
-}
+
 
 #popularlabel {
     text-transform: uppercase;
@@ -299,5 +402,3 @@ main {
     color: white;
     font-weight: 500;
 }
-
-/* color: #8DC63F; */
