--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,6 @@ body {
     background-color: #f8f8f8;
     border-collapse: collapse;
     width: 100%;
-    height: 100vh;
 
 }
 
@@ -34,7 +33,7 @@ body {
 #mainlogo {
     width: 60%;
     text-align: center;
-    padding: 1em;
+    padding: 16px;
 
 }
 
@@ -103,7 +102,7 @@ body {
 #subheader form img {
 
     height: 20px;
-    margin-left: 2em;
+    margin-left: 32px;
     vertical-align: middle;
 }
 
@@ -111,13 +110,15 @@ body {
 #subheader input {
     height: 40px;
     border: none;
-    font-style: italic;
     vertical-align: middle;
+    color: #a8a8a8;
 
 }
 
+
 #subheader input::placeholder {
-    font-size: 1em;
+    font-size: 14px;
+    font-style: italic;
     color: #a8a8a8;
 }
 
@@ -158,33 +159,35 @@ menu li {
     transition: color 0.7s ease-in-out;
 }
 
-#searchmenu li:first-of-type p{
-    color:#8DC63F;
+#searchmenu li:first-of-type p {
+    color: #8DC63F;
 }
 
 
-
-#searchmenu p:hover{
+#searchmenu menu p:hover,
+#searchmenu li:first-of-type p:hover {
     color: black;
 }
 
 #searchmenu section p {
+    font-size: small;
     color: gray;
 }
 
 #searchmenu section p:first-of-type {
     margin-top: 80px;
+    font-size: small;
 }
 
 #searchmenu section p:nth-of-type(2) {
     margin-top: 10px;
     color: black;
     font-weight: 500;
+    font-size: medium;
 }
 
 .mainheadericons {
     display: inline-block;
-    /* position: relative; */
     height: 40px;
 
 }
@@ -192,31 +195,39 @@ menu li {
 .mainheadericons img {
     vertical-align: bottom;
     margin-right: 13px;
-    width: 25px;
+    width: 20px;
 
 }
 
 
 .mainheadericons span {
+    cursor: pointer;
     display: inline-block;
     margin-right: 25px;
     height: 50px;
 }
 
+.mainheadericons span:hover {
+    opacity: 0.7;
+}
+
 .mainheadericons span:last-of-type {
     margin-right: 20px;
-
-
 }
+
 
 .mainheadericons:last-of-type {
     float: right;
 
 }
 
+.mainheadericons:last-of-type span:hover {
+    opacity: 1;
+}
+
 #mainheader {
 
-    padding: 22px 0 22px 10px;
+    padding: 28px 0 13px 10px;
     color: #666;
     font-size: 15px;
     border-bottom: 1px dotted #ddd;
@@ -351,34 +362,35 @@ main {
     display: inline-block;
     margin: 0 0.5em 0.2em;
     font-size: small;
-    
+
 
 }
 
-#firstfavoriteicon{
+#firstfavoriteicon {
     cursor: pointer;
     width: 25px;
     height: 25px;
     /* opacity: 0.3; */
     margin-right: 16px;
-    background:url('./imgs/icons/FavoritesIcon.png');
+    background: url('./imgs/icons/FavoritesIcon.png');
 }
+
 .favoriteicon {
     cursor: pointer;
     width: 25px;
     height: 20px;
     opacity: 0.3;
     margin-right: 16px;
-    background:url('../imgs/icons/FavoritesIcon.png') no-repeat;
+    background: url('../imgs/icons/FavoritesIcon.png') no-repeat;
     background-size: contain;
-    transition: background 0.3s ease-in-out,opacity 0.3s ease-in-out;
+    transition: background 0.3s ease-in-out, opacity 0.3s ease-in-out;
 
 }
 
 
 .favoriteicon:hover {
     opacity: 1;
-    background:url('../imgs/icons/greenheart.png') no-repeat;
+    background: url('../imgs/icons/greenheart.png') no-repeat;
     background-size: contain;
 
 }
