--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@ body {
     border-collapse: collapse;
     width: 100%;
 
+
 }
 
 #topheader {
@@ -15,12 +16,14 @@ body {
     position: sticky;
     z-index: 1;
     height: 85px;
+    display: flex;
+    justify-content: space-between;
     background-color: #464642;
 }
 
 #socialmedia {
-    width: 20%;
-    text-align: left;
+    display: flex;
+    align-items: center;
     padding-left: 40px;
 }
 
@@ -31,9 +34,8 @@ body {
 }
 
 #mainlogo {
-    width: 60%;
-    text-align: center;
-    padding: 16px;
+    display: flex;
+    align-items: center;
 
 }
 
@@ -43,10 +45,11 @@ body {
 
 
 #call {
-    width: 20%;
     color: white;
     font-size: 25px;
     font-weight: 500;
+    display: flex;
+    align-items: center;
     text-align: right;
 }
 
