--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,12 @@
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
+    background-color: #f8f8f8;
+    
 }
 
 #header {
-    background-color: #f8f8f8;
+    
     border-collapse: collapse;
     width: 100%;
 
@@ -63,13 +65,14 @@ body {
 
     vertical-align: middle;
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 25px;
     margin-left: 5px;
     margin-bottom: 5px;
 }
 
 #call img:nth-of-type(2) {
     width: 25px;
+    margin-right: 10px;
 
 }
 
@@ -93,7 +96,9 @@ body {
     z-index: 1;
 }
 
-
+#cellform{
+    width: 20%;
+}
 
 
 #subheader form {
@@ -113,6 +118,7 @@ body {
 #subheader input {
     height: 40px;
     border: none;
+    margin-left: 5px;
     vertical-align: middle;
     color: #a8a8a8;
 
@@ -189,10 +195,25 @@ menu li {
     font-size: medium;
 }
 
+#mainheader {
+
+    padding: 28px 0 13px 10px;
+    color: #666;
+    font-size: 15px;
+    border-bottom: 1px dotted #ddd;
+    display: flex;
+
+
+}
+
+
 .mainheadericons {
-    display: inline-block;
     height: 40px;
 
+}
+
+.mainheadericons:first-of-type{
+    flex-grow: 1;
 }
 
 .mainheadericons img {
@@ -219,29 +240,10 @@ menu li {
 }
 
 
-.mainheadericons:last-of-type {
-    float: right;
-
-}
-
 .mainheadericons:last-of-type span:hover {
     opacity: 1;
 }
 
-#mainheader {
-
-    padding: 28px 0 13px 10px;
-    color: #666;
-    font-size: 15px;
-    border-bottom: 1px dotted #ddd;
-
-
-}
-
-#myaccount {
-    float: right;
-    padding-right: 1em;
-}
 
 
 
@@ -249,18 +251,17 @@ menu li {
 
 #menudisplay {
     vertical-align: top;
-}
-
-main {
     display: flex;
-
+    flex-direction: row;
+    flex-wrap: wrap;
 }
+
 
 #shoppingcart {
     background-color: #eeeeee;
     vertical-align: top;
     text-align: center;
-
+    width: 20%;
 }
 
 #shoppingcart img {
@@ -270,13 +271,13 @@ main {
 
 
 #menudisplay section {
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
     width: 47%;
-    height: 420px;
+    height: 410px;
     background-color: white;
     margin-right: 1em;
     margin-bottom: 1.5em;
-    position: relative;
     bottom: 0;
     vertical-align: top;
     box-shadow: 0 0 4px rgba(204, 204, 204, 0.24);
@@ -287,6 +288,7 @@ main {
     font-size: 2.5em;
     font-weight: 700;
     margin-top: 17px;
+    width: 100%;
 
 }
 
@@ -302,13 +304,31 @@ main {
 }
 
 #menudisplay footer {
-    width: 100%;
-    position: absolute;
+    width: 95%;
+    height:10%;
+    display: flex;
     bottom: 0;
-    margin-left: 1rem;
-    margin-bottom: 0.8em;
+    padding: 0 0.8em;
 }
 
+#menudisplay footer>div:first-of-type{
+    flex-grow: 1;
+}
+
+#menudisplay footer>:nth-child(2) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1em;
+
+}
+#menudisplay footer p {
+    display: inline-block;
+    /* adjusted from margin to padding */
+    padding-right: 0.7em;
+    font-size: small;
+
+}
 
 #menudisplay button {
     cursor: pointer;
@@ -333,11 +353,13 @@ main {
     background-color: rgb(141, 198, 63, 0.7);
 }
 
+
 #menudisplay button:nth-of-type(2):hover {
     color: rgb(141, 198, 63, 0.7);
     border-color: rgb(141, 198, 63, 0.7);
 
 }
+
 
 .menuimages {
     width: 100%;
@@ -346,6 +368,7 @@ main {
 }
 
 .menudescription {
+    flex-grow: 1;
     margin-left: 1rem;
     margin-top: 0.5em;
     font-size: small;
@@ -355,19 +378,9 @@ main {
     width: 88%;
 }
 
-#menudisplay footer div {
-    float: right;
-    margin-right: 1em;
-
-}
-
-#menudisplay footer p {
-    display: inline-block;
-    margin: 0 0.5em 0.2em;
-    font-size: small;
 
 
-}
+
 
 #firstfavoriteicon {
     cursor: pointer;
@@ -383,7 +396,7 @@ main {
     width: 25px;
     height: 20px;
     opacity: 0.3;
-    margin-right: 16px;
+    /* margin-right: 16px; */
     background: url('../imgs/icons/FavoritesIcon.png') no-repeat;
     background-size: contain;
     transition: background 0.3s ease-in-out, opacity 0.3s ease-in-out;
